# forbidden-west-localizer

./: .gitmodules  CMakeLists.txt  README.md
.github/workflows/: cmake.yml
libs/: CMakeLists.txt
source/: dllmain.cpp  exports.inc
source/Decima/Core/: CoreObject.h  ExportedSymbolGroup.h  GGUUID.h  IStreamingManager.h  IStreamingSystem.h  LocalizedTextResource.h  RTTI.cpp  RTTI.h  RTTIObject.h  RTTIRefObject.h  Resource.h  StreamingManager.h
source/Decima/PCore/: Array.h  HashMap.h  Ref.h  String.h
source/Injector/: Injector.cpp  Injector.h
source/Util/: Assert.h  Offsets.cpp  Offsets.h
